tests/error/effects_errors/overload.err
Error: Invalid call of overloaded function (at $FILE:24:11)
   | 
22 | @guppy(effects=[])
23 | def bad_pure_func(x: float) -> float:
24 |     return only_pure_for_int(x)
   |            ^^^^^^^^^^^^^^^^^^^^ No variant of overloaded function `only_pure_for_int` takes
   |                                 a `float` argument and returns `float` with effects no more
   |                                 than []

Note: Available overloads are:
  def only_pure_for_int(x: T) -> T
  def only_pure_for_int(x: int) -> int

Guppy compilation failed due to 1 previous error
